# helios

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 28cb78774149_add_model_column_to_spans.py  7a516259a43b_initial_schema.py  ac0911b6102a_widen_api_keys_prefix_column.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: alerts.py  auth.py  cost.py  health.py  ingest.py  runs.py
apps/api/app/core/: config.py  db.py  logging.py  middleware.py  pricing.py  security.py
apps/api/app/models/: __init__.py  agent.py  base.py  billing.py  organization.py  security.py  trace.py
apps/api/app/schemas/: auth.py  dashboard.py  ingestion.py
apps/api/app/services/: cost_service.py  dashboard_service.py  ingestion_service.py  injection_service.py  pii_service.py  risk_service.py
apps/api/app/workers/: queue.py  tasks.py  worker.py
apps/api/tests/: conftest.py  test_alert_routes.py  test_alert_service.py  test_auth_routes.py  test_cost_routes.py  test_cost_service.py  test_cost_summary.py  test_coverage_gaps.py  test_dashboard_service.py  test_deps.py  test_health.py  test_ingest_routes.py  test_ingestion_service.py  test_injection_service.py  test_logging.py  test_middleware.py  test_models.py  test_pii_service.py  test_risk_service.py  test_run_routes.py  test_security.py  test_worker_entrypoint.py  test_worker_tasks.py
apps/web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/app/: layout.tsx  page.test.tsx  page.tsx
docs/: ARCHITECTURE.md  PRD.md  ROADMAP.md  TDD.md
infra/: docker-compose.yml
(+27 files in other folders)
