[project]
name = "helios-api"
version = "0.1.0"
description = "Helios API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "email-validator>=2.2",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.1",
    "rq>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
# SQLAlchemy's async engine bridges to its sync DBAPI drivers via greenlet
# context switches. Without this, coverage's tracer loses continuity across
# those switches and misreports lines right after certain awaits as
# uncovered even when they demonstrably run (verified with coverage's own
# annotate output against a passing test that must execute them).
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 95
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "UP035", "UP007", "I001"]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
